--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,11 +17,9 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  margin: 0;
+  font-size: 1.5em;
+  text-align: center;
+  background: #383838;
+  color: #fff;
 }
