--- a/src/app/styles.module.css
+++ b/src/app/styles.module.css
@@ -6,7 +6,7 @@
 
 
 .btnNewGame {
-    background: none;
+    margin-top: 20px;
     border: 2px solid #fff;
     padding: 6px 12px;
     border-radius: 4px;
@@ -16,10 +16,6 @@
     font-size: 1em;
 }
 
-.btnNewGame:hover {
-    background: #c23866;
-    color: #fff;
-}
 
 
 .front {
@@ -29,7 +25,7 @@
     border: 1px solid #ffffff;
     /* Set your border color */
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
-    width: 20%;
+    width: 29%;
     transition-delay: 0.2s;
 }
 
@@ -42,17 +38,17 @@
 
 .flipped .front {
     transform: rotateY(0deg);
-    width: 20%;
+    width: 29%;
 }
 
 .flipped .back {
-    width: 20%;
+    width: 29%;
     transform: rotateY(90deg);
     transition-delay: 0s;
 }
 
 .blurBack {
-    filter: blur(2px) brightness(4%);
+    filter: blur(2px) brightness(15%);
     transition: all ease-in 0.2s;
     transition-delay: 0.2s;
 }
